--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
-<!doctype html>
-<html lang="pt-BR>
+<!DOCTYPE html>
+<html lang="pt-BR">
+
 <head>
-<meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width, initial- scale=1.0"/>
-<title>
-Colegio Estadual La Salle - pensamento computacional turma 1F
-</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>
+    Colégio Estadual La Salle - Pensamento Computacional - Turma 1F
+  </title>
 </head>
+
+<body>
+  <h1>Colégio Estadual La Salle - Pensamento Computacional</h1>
+  <h2>Seja bem-vindo(a) a página do(a) Fulano(a).</h2>
+
+  <img src="Cebolinha.png" alt="Cebolinha" width="100" />
+  <img src="Monica.png" alt="Mônica" width="100" />
+
+  <h3>Esta é minha primeira página de internet !!!</h3>
 </body>
-</h1>Colégio Estadual La Salle - pensamento computacional </h1>
-</h2>Seja bem -vindo(a) a página do (a) Fulano(a).</h2>
 
-<img src="Cebolinha.png" alt="cebolinha" width="100"/>
-<img src="Monica.png"alt="monica" width="100" />
-
-</h3>esta é minha primeira pagina de internet !!!</h3>
-</body>
-</html> 
-
+</html>
