atualização da dona da pagina

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
 <body>
   <h1>Colégio Estadual La Salle - Pensamento Computacional</h1>
-  <h2>Seja bem-vindo(a) a página do(a) Fulano(a).</h2>
+  <h2>Seja bem-vindo(a) a página da Renata Marinho</h2>
 
-  <img src="Cebolinha.png" alt="Cebolinha" width="100" />
   <img src="Monica.png" alt="Mônica" width="100" />
 
   <h3>Esta é minha primeira página de internet !!!</h3>
